--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>API</title>
 </head>
 <body>
+    <main>
+        <h1>A SIMPLE API FETCH</h1>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
